contrib/cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedIdentifierTest/iz175782_2.cpp
struct S
{
    friend void r(int&);
};
void r(int&);
struct B {
    friend void c(int&);
};
void c(int&) {
}

struct string {};
struct subString {};
struct A {
    friend inline void cat(const string&, const char*, string&);
};
inline void cat(const string&, const char*, string&) {
}